# AutoRetroSynthesis

./: .gitignore  ARCHITECTURE.md  README.md  analysis.ipynb  analyze.py  app.py  colab.ipynb  model.py  prepare.py  program.md  pyproject.toml  train.py
terraform/: main.tf  outputs.tf  variables.tf
