[project]
name = "autoresearch-retro"
version = "0.1.0"
description = "Autonomous retrosynthesis research via AI agent experimentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "gradio>=5.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=5.18.0",
    "pubchempy>=1.0.4",
    "rdkit>=2024.3.0",
    "requests>=2.32.0",
    "torch>=2.4.0,<2.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
